--- a/index.html
+++ b/index.html
@@ -245,16 +245,25 @@
                     Autumn Gupta
                   </h2>
                   <em>
-                    Director of Advocacy
+                    Co-Director of Advocacy
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Sophomore
+                    <strong>Year:</strong> Junior 
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Mechanical Engineering
+                    <strong>Major:</strong> Environmental Studies
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact:</strong> My favorite color is green because I had a really intense Ireland phase in 7th grade.
+                    <strong>Minor:</strong> Spatial Studies
+                  </figcaption>
+                  <figcaption>
+                    <strong>Hometown:</strong> Smithville, Missouri
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> My secret talent is lassoing
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> CARROTS
                   </figcaption>
                 </figure>
               </a>
@@ -277,7 +286,13 @@
                     <strong>Minors:</strong> Photography and Social Change; Helath
                   </figcaption>
                   <figcaption>
-                    <strong>Environmental cause most passionate about:</strong> Stopping the Anthropocene — the planet’s entirely human-caused, 6th mass extinction.
+                    <strong>Hometown:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
               </a>
@@ -291,13 +306,19 @@
                     Co-Director of Advocacy
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Sophomore
+                    <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> UNKNOWN
+                    <strong>Majors:</strong> Political Science and NGO's & Social Change
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> UNKNOWN
+                     <strong>Hometown:</strong> Porterville, CA
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> I've seen every episode of Ancient Aliens at least 10 times each. Highly obsessed with aliens. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Onion. They have layers
                   </figcaption>
                 </figure>
               </a>
@@ -314,10 +335,16 @@
                     <strong>Year:</strong> Sophomore
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Studies; Philosophy, Politics, and Law
+                    <strong>Major:</strong> Environmental Science and Health
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> I lost my guinea pig in my backyard once.
+                    <strong>Hometown:</strong> Irvine, California
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> I volunteered on an organice herbal tea farm this summer!
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Artichoke
                   </figcaption>
                 </figure>
               </a>
@@ -331,13 +358,19 @@
                     Co-Director of Outreach
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Sophomore
+                    <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Science and Health
+                    <strong>Major:</strong> Environmental Studies
                   </figcaption>
                   <figcaption>
-                    <strong>Favorite outdoor activity:</strong> Urban gardening then making dinner with my produce!
+                     <strong>Hometown:</strong> Los Gatos, CA
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> One day I want to be on the board of an art musuem. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> String bean 
                   </figcaption>
                 </figure>
               </a>
@@ -351,13 +384,19 @@
                    Co-Executive Director
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Junior
+                    <strong>Year:</strong> Senior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Studies
+                    <strong>Major:</strong> Environmental Engineering
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> I'm lefty.
+                    <strong>Hometown:</strong> Buffalo, NY
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> I have kayaked the same route as the mayor in Portlandia. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Golden Beet
                   </figcaption>
                 </figure>
               </a>
@@ -374,13 +413,16 @@
                     <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Chemical Engineering (Sustainable Energy)
+                    <strong>Majors:</strong> Environmental Studies and Political Economics
                   </figcaption>
                   <figcaption>
-                    <strong>Favorite outdoor activity:</strong> Kayaking
+                    <strong>Hometown:</strong> Rye, NY 
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit vegetable:</strong> Snap Pea
+                    <strong>Fun Fact:</strong> I have an identical twin sister. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Beets
                   </figcaption>
                 </figure>
               </a>
@@ -394,13 +436,19 @@
                     Director of External Affairs
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Junior
+                    <strong>Year:</strong> Senior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Neuroscience
+                    <strong>Major:</strong> Business
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> I’ve swam with whale sharks! They’re the largest fish in the ocean.
+                    <strong>Hometown:</strong> Hacienda Heights, CA
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> I've been raising chickens at home for eight years now. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Sweet potato
                   </figcaption>
                 </figure>
               </a>
@@ -420,7 +468,16 @@
                     <strong>Major:</strong> International Relations
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> UNKNOWN
+                    <strong>Minors:</strong> Environmental Studies and Law & Public Policy
+                  </figcaption>
+                  <figcaption>
+                    <strong>Hometown:</strong> New York
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> I am trilingual
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Scallion
                   </figcaption>
                 </figure>
               </a>
@@ -434,13 +491,19 @@
                     Director of Events
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Senior
+                    <strong>Year:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Biological Sciences
+                    <strong>Major:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> I love snorkeling. My favorite places I have been so far are the U.S. Virgin Islands and the Florida Keys.
+                   <strong>Hometown:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
               </a>
@@ -454,13 +517,19 @@
                     Co-Director of Outreach
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Sophomore
+                    <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
                     <strong>Major:</strong> Environmental Engineering
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit vegetable:</strong> Sugar snap peas! We’ll be like 2 peas in a pod if you join ESA :)
+                   <strong>Hometown:</strong> Milwaukee, WI
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> Sasha Obama called me out for being "too old" for the crowd at a musical festival last summer. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Cherry tomato
                   </figcaption>
                 </figure>
               </a>
@@ -474,13 +543,19 @@
                     Co-Social Media Chair
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Senior
+                    <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> History and English
+                    <strong>Major:</strong> Undecided 
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> I cherish spending time with my friends and family.
+                    <strong>Hometown:</strong> Hawthorne, CA
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> I have an unhealthy obsession with donuts. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Tomatoes
                   </figcaption>
                 </figure>
               </a>
@@ -494,16 +569,19 @@
                     Community Gardens Chair
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Sophomore
+                    <strong>Year:</strong> Senior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Engineering
+                    <strong>Majors:</strong> History & English
                   </figcaption>
                   <figcaption>
-                    <strong>Minor:</strong> Theatre
+                   <strong>Hometown:</strong> Pacifica, CA
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> I can recite the alphabet backwards in under 3 seconds while doing a headstand.
+                    <strong>Fun Fact:</strong> I like to go horse-back riding in my free time. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Carrot
                   </figcaption>
                 </figure>
               </a>
@@ -517,16 +595,19 @@
                     Co-Greek Relations Chair
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> UNKNOWN
+                    <strong>Year:</strong> 
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Public Economy
+                    <strong>Major:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Minors:</strong> Social Entrepreneurship; Business Finance
+                  <strong>Hometown:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit vegetable:</strong> An orgainc purple carrot
+                    <strong>Fun Fact:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
               </a>
@@ -540,13 +621,19 @@
                     Co-Executive Director
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Senior
+                    <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Studies, naturally
+                    <strong>Major:</strong> Environmental Engineering
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit vegetable:</strong> Beet
+                    <strong>Hometown:</strong> Oakhurst, CA
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> My fingers are double jointed and I can gleek on command. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Artichokes
                   </figcaption>
                 </figure>
               </a>
@@ -560,16 +647,19 @@
                     Director of Internal Affairs
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Junior
+                    <strong>Year:</strong> Sophomore 
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Business Administration
+                    <strong>Major:</strong> Enviornmental Science and Health
                   </figcaption>
                   <figcaption>
-                    <strong>Minor:</strong> International Relations
+                    <strong>Hometown:</strong> New York City
                   </figcaption>
                   <figcaption>
-                    <strong>Favorite outdoor activity:</strong> Pretty into hiking, backpacking, and escaping the Concrete Jungle.
+                    <strong>Fun Fact:</strong> I am a shark diver. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Peas
                   </figcaption>
                 </figure>
               </a>
@@ -583,13 +673,19 @@
                     Co-Greek Relations Chair
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Junior
+                    <strong>Year:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Studies
+                    <strong>Major:</strong> 
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> My name means “date”(like the fruit) in hebrew!
+                    <strong>Hometown:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
               </a>
@@ -606,10 +702,16 @@
                     <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Studies
+                    <strong>Major:</strong> Business Administration
                   </figcaption>
                   <figcaption>
-                    <strong>Fun fact:</strong> My name means “date”(like the fruit) in hebrew!
+                   <strong>Hometown:</strong> Basking Ridge, NJ
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> As a child I lived on a farm in Ohio and once got lost in a corn field for 5 hours. 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Corn
                   </figcaption>
                 </figure>
               </a>
