--- a/index.html
+++ b/index.html
@@ -814,15 +814,7 @@
               <figure>
                 <img src="images/memberorgs/ara.jpg" alt="">
                 <figcaption>
-                  Animal Rights Association
-                </figcaption>
-              </figure>
-            </a>
-            <a target="_blank" href="https://www.facebook.com/BikeUSC">
-              <figure>
-                <img src="images/memberorgs/bike.png" alt="">
-                <figcaption>
-                  Bike Coalition
+                  Clover
                 </figcaption>
               </figure>
             </a>
