--- a/index.html
+++ b/index.html
@@ -595,19 +595,19 @@
                     Co-Greek Relations Chair
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> 
+                    <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong>
+                    <strong>Major:</strong> Environmental Studies
                   </figcaption>
                   <figcaption>
-                  <strong>Hometown:</strong>
+                  <strong>Hometown:</strong> Palos Verdes, CA
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact:</strong>
+                    <strong>Fun Fact:</strong> When I was little I used to eat sticks of butter. 
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit Vegetable:</strong>
+                    <strong>Spirit Vegetable:</strong> Cherry Red Tomato
                   </figcaption>
                 </figure>
               </a>
