--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
         <div id="members" class="subcontent grid">
           <h1>Member Organizations</h1>
           <div>
-            <a target="_blank" href="https://www.facebook.com/animalrightsusc">
+            <a target="_blank" href="https://www.facebook.com/groups/clovrer/">
               <figure>
                 <img src="images/memberorgs/ara.jpg" alt="">
                 <figcaption>
@@ -818,11 +818,11 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="https://www.facebook.com/usccooking/">
+            <a target="_blank" href="https://www.facebook.com/aaeesUSC/">
               <figure>
                 <img src="images/memberorgs/cooking.jpg" alt="">
                 <figcaption>
-                  Cooking Collaboration
+                  American Academy of of Environmental Engineers & Scientists
                 </figcaption>
               </figure>
             </a>
@@ -878,20 +878,36 @@
               <figure>
                 <img src="images/memberorgs/uscdive.jpg" alt="">
                 <figcaption>
-                  Environmental Studies Scientific Dive Team
+                 Scuba Diving Club
                 </figcaption>
               </figure>
             </a>
+            <a target="_blank" href="https://www.facebook.com/USCPFA/">
+              <figure>
+                <img src="images/memberorgs/ara.jpg" alt="">
+                <figcaption>
+                  Preloved Fashion Association
+                </figcaption>
+              </figure>
+            </a>
+            <a target="_blank" href="www.uscsolarcar.com">
+              <figure>
+                <img src="images/memberorgs/ara.jpg" alt="">
+                <figcaption>
+                  Solar Car Team
+                </figcaption>
+              </figure>
+            </a>
+            <a target="_blank" href="earth.usc.edu/sciencepolicy/">
+              <figure>
+                <img src="images/memberorgs/ara.jpg" alt="">
+                <figcaption>
+                  Science Policy Group
+                </figcaption>
+              </figure>
+         
             <!-- ADD NEW MEMBER ORGS HERE
                   - NOTE: when adding one, delete an empty one below -->
-            <a>
-              <figure>
-                <img src="images/no-image.png" alt="">
-                <figcaption>
-                  Coming Soon
-                </figcaption>
-              </figure>
-            </a>
             <a>
               <figure>
                 <img src="images/no-image.png" alt="">
