--- a/index.html
+++ b/index.html
@@ -874,11 +874,11 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="https://www.facebook.com/uscdiveteam">
+            <a target="_blank" href="http://scubadiveclub.weebly.com/">
               <figure>
                 <img src="images/memberorgs/uscdive.jpg" alt="">
                 <figcaption>
-                 Scuba Diving Club
+                 SCuba Diving Club
                 </figcaption>
               </figure>
             </a>
