--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
           <div>
             <a target="_blank" href="https://www.facebook.com/groups/clovrer/">
               <figure>
-                <img src="images/memberorgs/ara.jpg" alt="">
+                <img src="images/memberorgs/clover.png" alt="">
                 <figcaption>
                   Clover
                 </figcaption>
@@ -820,7 +820,7 @@
             </a>
             <a target="_blank" href="https://www.facebook.com/aaeesUSC/">
               <figure>
-                <img src="images/memberorgs/cooking.jpg" alt="">
+                <img src="images/memberorgs/aaes.jpg" alt="">
                 <figcaption>
                   American Academy of of Environmental Engineers & Scientists
                 </figcaption>
@@ -860,7 +860,7 @@
             </a>
             <a target="_blank" href="http://www.scoutfitters.org/">
               <figure>
-                <img src="images/memberorgs/scoutfitters.jpg" alt="">
+                <img src="images/memberorgs/scout.jpg" alt="">
                 <figcaption>
                   SC Outfitters
                 </figcaption>
@@ -884,7 +884,7 @@
             </a>
             <a target="_blank" href="https://www.facebook.com/USCPFA/">
               <figure>
-                <img src="images/memberorgs/ara.jpg" alt="">
+                <img src="images/memberorgs/pfa.jpg" alt="">
                 <figcaption>
                   Preloved Fashion Association
                 </figcaption>
@@ -892,7 +892,7 @@
             </a>
             <a target="_blank" href="www.uscsolarcar.com">
               <figure>
-                <img src="images/memberorgs/ara.jpg" alt="">
+                <img src="images/memberorgs/solarcar.jpg" alt="">
                 <figcaption>
                   Solar Car Team
                 </figcaption>
@@ -900,7 +900,7 @@
             </a>
             <a target="_blank" href="earth.usc.edu/sciencepolicy/">
               <figure>
-                <img src="images/memberorgs/ara.jpg" alt="">
+                <img src="images/memberorgs/spolicy.jpg" alt="">
                 <figcaption>
                   Science Policy Group
                 </figcaption>
