--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="www.uscsolarcar.com">
+            <a target="_blank" href="https://www.uscsolarcar.com">
               <figure>
                 <img src="images/memberorgs/solarcar.jpg" alt="">
                 <figcaption>
@@ -898,7 +898,7 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="earth.usc.edu/sciencepolicy/">
+            <a target="_blank" href="http://.earth.usc.edu/sciencepolicy/">
               <figure>
                 <img src="images/memberorgs/spolicy.jpg" alt="">
                 <figcaption>
