--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="http://.earth.usc.edu/sciencepolicy/">
+            <a target="_blank" href="http://earth.usc.edu/sciencepolicy/">
               <figure>
                 <img src="images/memberorgs/spolicy.jpg" alt="">
                 <figcaption>
