--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
             </a>
             <a target="_blank" href="http://www.facebook.com/GreeksGoGreenUSC/">
               <figure>
-                <img src="images/memberorgs/ggg.png" alt="">
+                <img src="images/memberorgs/ggg.jng" alt="">
                 <figcaption>
                   Greeks Go Green
                 </figcaption>
