--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
             </a>
             <a target="_blank" href="http://www.facebook.com/GreeksGoGreenUSC/">
               <figure>
-                <img src="images/memberorgs/ggg.jng" alt="">
+                <img src="images/memberorgs/ggg.jpg" alt="">
                 <figcaption>
                   Greeks Go Green
                 </figcaption>
@@ -852,7 +852,7 @@
             </a>
             <a target="_blank" href="http://peaksandprofessors.org/">
               <figure>
-                <img src="images/memberorgs/peaks.png" alt="">
+                <img src="images/memberorgs/peaks.jpg" alt="">
                 <figcaption>
                   Peaks and Professors
                 </figcaption>
