--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div>
               <a>
                 <figure id="fig1">
-                  <img src="images/eboard/aaryas.jpg" alt="">
+                  <img src="images/eboard/Autumn 73.jpg" alt="">
                   <h2>
                     Autumn Gupta
                   </h2>
@@ -269,7 +269,7 @@
               </a>
               <a>
                 <figure id="fig2">
-                  <img src="images/eboard/aillishu.jpg" alt="">
+                  <img src="images/eboard/Caden 61.jpg" alt="">
                   <h2>
                     Caden Cervesis
                   </h2>
@@ -298,7 +298,7 @@
               </a>
               <a>
                 <figure id="fig3">
-                  <img src="images/eboard/alanah.jpg" alt="">
+                  <img src="images/eboard/Carissa.jpg" alt="">
                   <h2>
                    Carissa Velasquez
                   </h2>
@@ -324,7 +324,7 @@
               </a>
               <a>
                 <figure id="fig4">
-                  <img src="images/eboard/brookeh.jpg" alt="">
+                  <img src="images/eboard/Claire.jpg" alt="">
                   <h2>
                     Claire Mauss
                   </h2>
@@ -350,7 +350,7 @@
               </a>
               <a>
                 <figure id="fig5">
-                  <img src="images/eboard/ceceu.jpg" alt="">
+                  <img src="images/eboard/Devin.jpg" alt="">
                   <h2>
                     Devin Manion
                   </h2>
@@ -376,7 +376,7 @@
               </a>
               <a>
                 <figure id="fig6">
-                  <img src="images/eboard/elliotp.jpg" alt="">
+                  <img src="images/eboard/esa-logo.png" alt="">
                   <h2>
                     Emily Palmer
                   </h2>
@@ -402,7 +402,7 @@
               </a>
               <a>
                 <figure id="fig7">
-                  <img src="images/eboard/emilyp.jpg" alt="">
+                  <img src="images/eboard/Emily 72.jpg" alt="">
                   <h2>
                     Emily Quirke
                   </h2>
@@ -428,7 +428,7 @@
               </a>
               <a>
                 <figure id="fig8">
-                  <img src="images/eboard/isabeli.jpg" alt="">
+                  <img src="images/eboard/esa-logo.png" alt="">
                   <h2>
                     Firuze Barimani
                   </h2>
@@ -454,7 +454,7 @@
               </a>
               <a>
                 <figure id="fig9">
-                  <img src="images/eboard/jacquelined.jpg" alt="">
+                  <img src="images/eboard/Isabella 71.jpg" alt="">
                   <h2>
                     Isabella Caltabiano
                   </h2>
@@ -483,7 +483,7 @@
               </a>
               <a>
                 <figure id="fig10">
-                  <img src="images/eboard/joshuab.jpg" alt="">
+                  <img src="images/eboard/esa-logo.png" alt="">
                   <h2>
                     Joseph Mathews
                   </h2>
@@ -509,7 +509,7 @@
               </a>
               <a>
                 <figure id="fig11">
-                  <img src="images/eboard/margauxw.jpg" alt="">
+                  <img src="images/eboard/esa-logo.png" alt="">
                   <h2>
                     Margaux Wilson
                   </h2>
@@ -535,7 +535,7 @@
               </a>
               <a>
                 <figure id="fig12">
-                  <img src="images/eboard/ogechii.jpg" alt="">
+                  <img src="images/eboard/Maryam 56.jpg" alt="">
                   <h2>
                     Maryam Sultan
                   </h2>
@@ -561,7 +561,7 @@
               </a>
               <a>
                 <figure id="fig13">
-                  <img src="images/eboard/oliviap.jpg" alt="">
+                  <img src="images/eboard/Ogechi 59.jpg" alt="">
                   <h2>
                     Ogechi Ibeanusi
                   </h2>
@@ -587,7 +587,7 @@
               </a>
               <a>
                 <figure id="fig14">
-                  <img src="images/eboard/paigep.jpg" alt="">
+                  <img src="images/eboard/Olivia C 54.jpg" alt="">
                   <h2>
                     Olivia Carmack
                   </h2>
@@ -613,7 +613,7 @@
               </a>
               <a>
                 <figure id="fig15">
-                  <img src="images/eboard/rebeccaw.jpg" alt="">
+                  <img src="images/eboard/Olivia 71.jpg" alt="">
                   <h2>
                     Olivia Pearson
                   </h2>
@@ -639,7 +639,7 @@
               </a>
               <a>
                 <figure id="fig16">
-                  <img src="images/eboard/soolgih.jpg" alt="">
+                  <img src="images/eboard/Sachi 59.jpg" alt="">
                   <h2>
                     Sachi Elias
                   </h2>
@@ -665,7 +665,7 @@
               </a>
               <a>
                 <figure id="fig17">
-                  <img src="images/eboard/tamarf.jpg" alt="">
+                  <img src="images/eboard/esa-logo.png" alt="">
                   <h2>
                     Samantha Archie
                   </h2>
@@ -691,7 +691,7 @@
               </a>
               <a>
                 <figure id="fig17">
-                  <img src="images/eboard/tamarf.jpg" alt="">
+                  <img src="images/eboard/Soven.jpg" alt="">
                   <h2>
                     Soven Bery
                   </h2>
