--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div>
               <a>
                 <figure id="fig1">
-                  <img src="images/eboard/Autumn 73.jpg" alt="">
+                  <img src="images/Autumn 73.jpg" alt="">
                   <h2>
                     Autumn Gupta
                   </h2>
