--- a/index.html
+++ b/index.html
@@ -742,24 +742,25 @@
           <h1>Partners</h1>
           <div class="section group">
             <div class="col span_1_of_2">
-              <h3>Green Student Fund</h3><br/>
-              <img class="partimg" src="images/partners/gsflogo.jpg" alt="">
+              <h3>Global Inheritance</h3><br/>
+              <img class="partimg" src="images/partners/globalinheritance.jpg" alt="">
             </div>
             <div class="col span_1_of_2">
-              <p>The Green Student Fund empowers, enables, and expands student involvement in the green movement. As a national 501c(3) not-for-profit, GSF offers funding to the brightest, most promising student-led, environmental initiatives. By raising money through our generous donors, we sponsor and empower these student groups to bridge the gap between ideas and change.</p>
-              <a target="_blank" href="https://www.facebook.com/greenstudentfund">Facebook</a><br/>
-              <a target="_blank" href="https://twitter.com/greenstudentfnd">Twitter</a><br/>
-              <a target="_blank" href="mailto:info@greenstudentfund.org">Email</a><br/>
+              <p>Global Inheritance works to empower individuals worldwide to think and act creatively in solving global issues. The group’s initiatives focus on the power of creativity to communicate and drive progressive social change. As a 501(c)3 nonprofit organization based in Los Angeles, California Global Inheritance has specialized in reaching young audiences to create awareness of environmental and social issues.</p>
+              <a target="_blank" href"https://http://www.globalinheritance.org/about/">Website</a><br/>
+              <a target="_blank" href="https://www.facebook.com/globalinheritance">Facebook</a><br/>
+              <a target="_blank" href="https://twitter.com/glblinheritance">Twitter</a><br/>
+              <a target="_blank" href="mailto:operator@globalinheritance.org">Email</a><br/>
             </div>
           </div>
           <div class="section group">
             <div class="col span_1_of_2">
-              <h3>Ink for Education</h3><br/>
-              <img class="partimg" src="images/partners/ifelogo.png" alt="">
+              <h3>Asta Works</h3><br/>
+              <img class="partimg" src="images/partners/astaworks.jpg" alt="">
             </div>
             <div class="col span_1_of_2">
-              <p>The Ink For Education Program was created to help students and alums dispose of their student loan debt and expenses related to acquiring their education by collecting used inkjet and toner cartridges discarded in our landfills and turning them into funds for students’ college and vocational school education.</p>
-              <a target="_blank" href="http://www.inkforeducation.org/" target="_blank">Website</a>
+              <p>Asta Works is a platform that guides and encourages recycling in a convenient and social manner. They help you make the right decision at the point of disposal and help you see your impact through their app. By collecting clothing, plastic bags, bottles & cans, and wine corns Asta Works works to reduce U.S. waste. </p>
+              <a target="_blank" href="http://www.astaworks.com/" target="_blank">Website</a>
             </div>
           </div>
           <div class="section group">
